feat: 맞춤형 정책 조회 수정 및 정책 동기화에서 AI 분리 (#66)